<resources>
    <string name="app_name">Snap N Save</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_smart_scan">SmartScanActivity</string>
    <string name="title_activity_crop_bill">CropBillActivity</string>
    <string name="title_activity_processed_image">ProcessedImageActivity</string>
    <string name="title_activity_static_filtered_result">StaticFilteredResultActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <!--Main Menu Home-->
    <string name="action_left">Input Bills</string>
    <string name="action_mid">Statistics</string>
    <string name="action_right">Settings</string>
    <string name="title_activity_registration">RegistrationActivity</string>

    <!-- Select bill entry-->
    <string name="action_left_2">Smart Scan</string>
    <string name="action_right_2">Manual Entry</string>

    <!-- Select stats entry-->
    <string name="action_left_3">Bar Chart</string>
    <string name="action_right_3">Pie Chart</string>
    <string name="action_mid_3">Calendar</string>

    <!-- Strings related to register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="action_sign_up">Lets Start Saving</string>
    <string name="title_activity_debugging">DebuggingActivity</string>
    <string name="prompt_income">Income per month</string>
    <!--<string name="prompt_budget">Willing to spend per month ?</string>-->

    <!-- String related to Smart scan activity-->
    <string name="prompt_sub_cat_name">Enter Sub Category Name</string>
    <string name="title_activity_non_static_filtered_result">NonStaticFilteredResultActivity
    </string>
    <string name="title_activity_manual_bill_entry">ManualBillEntryActivity</string>
    <string name="title_activity_dynamic_product_row_generation">
        DynamicProductRowGenerationActivity
    </string>
    <string name="title_activity_select_bill_entry_method">SelectBillEntryMethod</string>
    <string name="title_activity_no_name_non_static_filtered_result">
        NoNameNonStaticFilteredResultActivity
    </string>
    <string name="title_activity_bar_chart">BarChartActivity</string>
    <string name="title_activity_select_statistics_entry_method">SelectStatisticsEntryMethod
    </string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_pie_chart">PieChartActivity</string>
    <string name="title_activity_common_filtered_result">CommonFilteredResultActivity</string>
    <string name="title_activity_test">TestActivity</string>


    <!-- String for App Tour Guide-->
    <string name="MainMenuActivity_showcase_main_title">Home Button</string>
    <string name="MainMenuActivity_showcase_main_message">Select Input Bills/Statistics/Settings</string>

    <string name="SelectBillEntryMethod_showcase_main_title">Choose Bill Entry Button</string>
    <string name="SelectBillEntryMethod_showcase_main_message">Select SMART SCAN or MANUAL ENTRY</string>

    <string name="SmartScanActivity_showcase_main_title">Camera Button</string>
    <string name="SmartScanActivity_showcase_main_message">If its a long grocery bill,\nget several pictures in sequence and crop respectively.\nFor example get 7 products per image to increase accuracy.\nTry not to snap same rows twice.</string>


    <string name="CropBillActivity_showcase_main_title">SMART Scan Button</string>
    <string name="CropBillActivity_showcase_main_message">This will extract the values from the images automatically</string>
    <string name="title_activity_unwanted_exp_question">UnwantedExpQuestionActivity</string>



    <!-- Strings for unwanted expenses-->
    <string name="QYes">Yes</string>
    <string name="QNo">No</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
