<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context="com.example.nuwan.nbqsafirstround.RegistrationActivity"
    android:background="@color/background_color"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <!---->
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Snap 'N Save"
            android:id="@+id/textView2"
            android:textSize="30dp"
            android:textColor="@color/text_colors"
            android:textStyle="bold"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <ScrollView
            android:id="@+id/signup_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/email_signup_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <EditText android:id="@+id/name" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_name"
                        android:imeActionLabel="Enter"
                        android:imeOptions="actionUnspecified" android:inputType="text"
                        android:maxLines="1" android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="@color/text_colors"
                        android:textColor="@color/text_colors" />

                    <EditText android:id="@+id/email" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress" android:maxLines="1"
                        android:imeActionLabel="Enter"
                        android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="@color/text_colors"
                        android:textColor="@color/text_colors" />

                    <EditText android:id="@+id/income" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_income"
                        android:inputType="number" android:maxLines="1"
                        android:imeActionLabel="@string/action_sign_up"
                        android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="@color/text_colors"
                        android:textColor="@color/text_colors" />

                    <!--<EditText android:id="@+id/budget" android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content" android:hint="@string/prompt_budget"-->
                        <!--android:inputType="number" android:maxLines="1"-->
                        <!--android:imeActionLabel="@string/action_sign_up"-->
                        <!--android:singleLine="true"-->
                        <!--android:layout_marginBottom="10dp"-->
                        <!--android:textColorHint="@color/text_colors"-->
                        <!--android:textColor="@color/text_colors" />-->



                    <!--<EditText android:id="@+id/password" android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content" android:hint="@string/prompt_password"-->
                        <!--android:imeActionLabel="@string/action_sign_up"-->
                        <!--android:imeOptions="actionUnspecified" android:inputType="textPassword"-->
                        <!--android:maxLines="1" android:singleLine="true"-->
                        <!--android:layout_marginBottom="10dp"-->
                        <!--android:textColorHint="#ffffffff"-->
                        <!--android:textColor="#ffffffff" />-->

                    <Button android:id="@+id/email_sign_up_button" style="?android:textAppearanceSmall"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginTop="16dp" android:text="@string/action_sign_up"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:background="@color/text_colors"
                        android:onClick="saveDetails"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:id="@+id/ll3"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="bottom|center_horizontal">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Already have an Account? Sign In"-->
            <!--android:id="@+id/signInTextView"-->
            <!--android:autoLink="web"-->
            <!--android:textColor="#ffffffff" />-->
    <!--</LinearLayout>-->

</LinearLayout>
